--- a/webroot/css/screen.css
+++ b/webroot/css/screen.css
@@ -186,7 +186,7 @@ table {
 	content:"\f604";
 }
 .icon-arrow-left:before {
-	content:"\f605";
+	content:"<";
 }
 .icon-stats:before {
 	content:"\f606";
@@ -521,9 +521,11 @@ body.nav-opened .site-wrapper {
 	text-decoration:none;
 	font-size:0.9em;
 	letter-spacing:0.3px;
+	height: 54px;
 	font-weight:400;
 	color:#ccc;
 	font-family:Playfair Display;
+	padding-top: 0;
 }
 .main-nav .nav-current a {
 	color:#fff;
@@ -721,7 +723,7 @@ body.nav-opened .nav {
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
 	display:block;
-	height:auto;
+	height:inherit;
 	padding:0;
 	width:auto;
 	opacity:1;
@@ -1503,6 +1505,7 @@ h2.widget-title {
 	.blog-logo img {
 		padding:0 0 0 10px;
 		margin-top:-54px;
+		height: inherit;
 	}
 	.page-title {
 		font-size:4rem;
@@ -1925,7 +1928,7 @@ a.btn-more {
 	display:block;
 	width:25px;
 	height:25px;
-	background:url(../img/top.png) no-repeat center center;
+	background:url(/img/top.png) no-repeat center center;
 }
 footer.site-footer:after {
 	bottom:100%;
