--- a/webroot/css/screen.css
+++ b/webroot/css/screen.css
@@ -462,7 +462,7 @@ iframe,.fluid-width-video-wrapper {
 .site-wrapper {
 	position:relative;
 	z-index:10;
-	min-height:100%;
+	min-height:10%;
 	background:#fff;
 	-webkit-transition:-webkit-transform 0.5s ease;
 	transition:transform 0.5s ease;
@@ -862,6 +862,7 @@ body.nav-opened .nav {
 	word-wrap:break-word;
 }
 .grid-item .post {
+	border-radius: 10px;
 	position:relative;
 	border:#EBF2F6 1px solid;
 	word-wrap:break-word;
