--- a/webroot/css/post_product.css
+++ b/webroot/css/post_product.css
@@ -7,7 +7,6 @@
 .product-content .shop-image img{
     size: cover;
     position: center;
-    attachment: fixed;
     width: 100%;
 }
   
@@ -37,20 +36,154 @@
 }
   
 .description{
-    width: 320px;
+    width: 438px;
+    border: none;
+    background-color: #F6F6F6;
+    font-family: Roboto;
+    text-rendering: geometricPrecision;
+    font-weight: 300;
+    letter-spacing: 0.01rem;
+    font-size: 1.7rem;
+    color: #212529;
 }
+
+.description:focus{
+    outline: none;
+}
+
+.description::-webkit-scrollbar {
+    width: 10px;
+    height: 5px;
+    background-color: #F5F5F5; 
+}
+  
+.description::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: rgb(95, 112, 129) 
+}
+
 .column-content{
     border-top:1px solid #e1e1e1;
 }
 .column-content:hover{
-    background-color: aquamarine;
+    background-color:  #FFFBEA;
 }
 
 .header{
-    text-align: center;
-    margin-top: 15px;
-    color: #294057;
-    font: normal normal normal 25px/1.4em "open sans",sans-serif;
-    width: 100%;
+  text-align: center;
+  margin-top: 15px;
+  color: #294057;
+  font: normal normal normal 25px/1.4em "open sans",sans-serif;
+  width: 100%;
 
+}
+
+.button{
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+.button i{
+  color:white;
+  font-size: 1.7em;
+  display: inline-block;
+  line-height: 43px;
+  margin: 0 3px;
+}
+
+.add-product-div{
+    margin-top: 15px;
+    text-align: left;
+}
+
+.add-product{
+  width: auto;
+  height: 40px;
+  margin: auto;
+  font: normal normal normal 15px/1.4em "open sans",sans-serif;
+  background: #4285f4;
+  color: #fff;
+  border-width: 0px;
+  /* border-radius: 5px; */
+}
+
+.add-product:hover{
+  background-color: rgb(102, 179, 255)
+}
+  
+.add-product:focus{
+  outline: none;
+}
+
+.product-infor{
+  margin-left: 10%;
+  margin-top: 2%;
+}
+
+.product-infor div{
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 36px;
+  padding-right: 36px;
+  margin: 6px 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.product-infor div label{
+  width: 150px;
+  font-weight: bold;
+  margin-bottom: 9px;
+  float: left;
+  display: inline-block;
+  text-align: left;
+  padding: 3px;
+  white-space: normal;
+  word-break: break-word;  
+}
+.product-infor div input,textarea,select{
+  padding: 3px;
+  margin-left: 0;
+  border: 1px solid #ccc;
+  font-size: 1em;
+  line-height: 1.071em;
+  box-shadow: 0 1px 2px #eee inset;
+  width: 390px;
+}
+
+.product-infor .new-image input{
+  border: none;
+  box-shadow: none;
+}
+
+.product-infor .submit{
+  border: none;
+  width: auto;
+  height: 40px;
+  margin-left: 190px;
+  font: normal normal normal 15px/1.4em "open sans",sans-serif;
+  background: #4285f4;
+  color: #fff;
+  border-radius: 2px;
+}
+
+.product-infor .submit:hover{
+  background-color: rgb(102, 179, 255)
+}
+  
+.product-infor .submit:focus{
+  outline: none;
+}
+
+.product-infor div:hover{
+  background: #FFFBEA;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  opacity: 1
 }
